syntax = "proto3";

package proto;

option go_package = "github.com/MisterMaks/go-yandex-shortener/api/proto";

service App {
  rpc GetOrCreateURL(GetOrCreateURLRequest) returns (GetOrCreateURLResponse);
//  rpc RedirectToURL(RedirectToURLRequest) returns (RedirectToURLResponse);
  rpc Ping(PingRequest) returns (PingResponse);
  rpc GetOrCreateURLs(GetOrCreateURLsRequest) returns (GetOrCreateURLsResponse);
  rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
  rpc DeleteUserURLs(DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
  rpc GetInternalStats(GetInternalStatsRequest) returns (GetInternalStatsResponse);
}

message GetOrCreateURLRequest {
  string url = 1;
}

message GetOrCreateURLResponse {
  string short_url = 1;
}

message PingRequest {}

message PingResponse {}

message GetOrCreateURLsRequest {
  message URL {
      string correlation_id = 1;
      string original_url = 2;
  }

  repeated URL urls = 1;
}

message GetOrCreateURLsResponse {
  message URL {
    string correlation_id = 1;
    string short_url = 2;
  }

  repeated URL short_urls = 1;
}

message GetUserURLsRequest {}

message GetUserURLsResponse {
  message URL {
    string original_url = 1;
    string short_url = 2;
  }

  repeated URL urls = 1;
}

message DeleteUserURLsRequest {
  repeated string url_ids = 1;
}

message DeleteUserURLsResponse {}

message GetInternalStatsRequest {}

message GetInternalStatsResponse {
    int64 urls = 1;
    int64 users = 2;
}